--- a/output/interrupts.dSYM/Contents/Resources/Relocations/aarch64/interrupts.yml
+++ b/output/interrupts.dSYM/Contents/Resources/Relocations/aarch64/interrupts.yml
@@ -1,5 +1,5 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     'output/interrupts'
+binary-path:     '/Users/dorian/LocalDocs/GitHub/SYSC4001_A2/output/interrupts'
 relocations:     []
 ...
